--- a/src/about.jade
+++ b/src/about.jade
@@ -18,119 +18,6 @@ html(lang='en')
 			.tophr
 			.main.wide-l
 				h1#page-tit Про BONO
-				.rb.opensans.leftb
-					a#ban-cons3.zaprosconl
-					.title Наши клиенты
-					.partners
-						.parnters-holder
-							.lnb
-							.parnters-container
-								.part
-									div
-										span
-											img(src='/upload/iblock/4b3/HyundaiLogo.png', data-href='/nashi-klienty/?client=472')
-									div
-										span
-											img(src='/upload/iblock/22a/KIA.png', data-href='/nashi-klienty/?client=471')
-									div
-										span
-											img(src='/upload/iblock/995/Luxoft_logo.png', data-href='/nashi-klienty/?client=470')
-									div
-										span
-											img(src='/upload/iblock/219/EPAM_logo.png', data-href='/nashi-klienty/?client=469')
-									div
-										span
-											img(src='/upload/iblock/543/yandex2.png', data-href='/nashi-klienty/?client=487')
-									div
-										span
-											img(src='/upload/iblock/474/Metinvest_Logo_Ukr2.png', data-href='/nashi-klienty/?client=474')
-								.part
-									div
-										span
-											img(src='/upload/iblock/797/carlsberg_crown_logo_on_green.jpg', data-href='/nashi-klienty/?client=488')
-									div
-										span
-											img(src='/upload/iblock/f97/Logo_OTIS300dpi.png', data-href='/nashi-klienty/?client=486')
-									div
-										span
-											img(src='/upload/iblock/0fc/new_csa_logo_mar_2008.png', data-href='/nashi-klienty/?client=490')
-									div
-										span
-											img(src='/upload/iblock/c78/Лисод.png', data-href='/nashi-klienty/?client=473')
-									div
-										span
-											img(src='/upload/iblock/293/Кировский завод ОЦМ.png', data-href='/nashi-klienty/?client=475')
-									div
-										span
-											img(src='/upload/iblock/bad/ЕВРАЗ.png', data-href='/nashi-klienty/?client=489')
-								.part
-									div
-										span
-											img(src='/upload/iblock/033/uralremont.png', data-href='/nashi-klienty/?client=477')
-									div
-										span
-											img(src='/upload/iblock/b18/ukrdom.png', data-href='/nashi-klienty/?client=479')
-									div
-										span
-											img(src='/upload/iblock/bca/КРИВБАССПЕЦПРОЕКТ.png', data-href='/nashi-klienty/?client=478')
-									div
-										span
-											img(src='/upload/iblock/49e/vse-logo.png', data-href='/nashi-klienty/?client=480')
-									div
-										span
-											img(src='/upload/iblock/72b/ua-tenders.gif', data-href='/nashi-klienty/?client=481')
-									div
-										span
-											img(src='/upload/iblock/966/TENTE.png', data-href='/nashi-klienty/?client=492')
-								.part
-									div
-										span
-											img(src='/upload/iblock/fb3/TMM.png', data-href='/nashi-klienty/?client=493')
-									div
-										span
-											img(src='/upload/iblock/b68/horizont.png', data-href='/nashi-klienty/?client=482')
-									div
-										span
-											img(src='/upload/iblock/f80/ЕБЕРСПЕХЕР-logo.png', data-href='/nashi-klienty/?client=495')
-									div
-										span
-											img(src='/upload/iblock/abc/asmap_1.png', data-href='/nashi-klienty/?client=496')
-									div
-										span
-											img(src='/upload/iblock/2ec/14284.png', data-href='/nashi-klienty/?client=497')
-									div
-										span
-											img(src='/upload/iblock/b9a/DEC.gif', data-href='/nashi-klienty/?client=498')
-								.part
-									div
-										span
-											img(src='/upload/iblock/a96/ITK-logo-ua.gif', data-href='/nashi-klienty/?client=483')
-									div
-										span
-											img(src='/upload/iblock/241/gazetaua.png', data-href='/nashi-klienty/?client=484')
-									div
-										span
-											img(src='/upload/iblock/9c1/site2.fd968aa3e6db262dda98d05d1cfd7f0d[1].jpg', data-href='/nashi-klienty/?client=491')
-									div
-										span
-											img(src='/upload/iblock/52a/kmv.png', data-href='/nashi-klienty/?client=485')
-									div
-										span
-											img(src='/upload/iblock/0e2/gagarin.jpg', data-href='/nashi-klienty/?client=494')
-							.rnb
-							.clear
-							#pager2
-					//
-						<div class="title">Полезные документы</div>
-						<ul>
-						<ul>
-						</ul>
-						</ul>
-						<div class="cloud">
-						<noindex>
-						<div class="search-tags-cloud"  style='width:100%;'><a href="/search/index.php?tags=%D0%B7%D0%B5%D0%BC%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D0%B5+%D0%BF%D1%80%D0%B0%D0%B2%D0%BE" class="c8"rel="nofollow">земельное право</a> <a href="/search/index.php?tags=%D0%97%D0%B0%D1%89%D0%B8%D1%82%D0%B0+%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D0%BE%D0%B2" class="c6"rel="nofollow">Защита интересов</a> <a href="/search/index.php?tags=%D1%80%D0%B0%D0%B7%D1%80%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D1%8F" class="c5"rel="nofollow">разрешения</a> <a href="/search/index.php?tags=%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F" class="c2"rel="nofollow">Интеллектуальная</a> <a href="/search/index.php?tags=%D1%81%D0%B5%D1%80%D1%82%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F" class="c4"rel="nofollow">сертификация</a> <a href="/search/index.php?tags=%D0%9A%D0%BE%D1%80%D0%BF%D0%BE%D1%80%D0%B0%D1%82%D0%B8%D0%B2%D0%BD%D1%8B%D0%B5+%D0%BF%D1%80%D0%B0%D0%B2%D0%BE%D0%BE%D1%82%D0%BD%D0%BE%D1%88%D0%B5%D0%BD%D0%B8%D1%8F" class="c2"rel="nofollow">Корпоративные правоотношения</a> <a href="/search/index.php?tags=%D0%9B%D0%B8%D1%86%D0%B5%D0%BD%D0%B7%D0%B8%D1%8F" class="c4"rel="nofollow">Лицензия</a> <a href="/search/index.php?tags=%D0%9C%D0%B8%D0%B3%D1%80%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%BD%D0%BE%D0%B5" class="c4"rel="nofollow">Миграционное</a> <a href="/search/index.php?tags=%D0%9D%D0%B5%D0%B4%D0%B2%D0%B8%D0%B6%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D1%8C" class="c8"rel="nofollow">Недвижимость</a> </div>
-						</noindex>
-						</div>
 				.main-container
 					font(color='#ff0000', size='5') - 
 					b(style='font-size: large; color: rgb(0, 84, 165);') ПРОЕКТ «#ProBono»
@@ -138,7 +25,7 @@ html(lang='en')
 					div
 						font(size='4')
 							br
-						img(src='/upload/medialibrary/3c5/probono-news.jpg', title='probono-news.jpg', border='0', alt='probono-news.jpg', width='735', height='403', align='middle')
+						img(src='http://justicon.ua/upload/medialibrary/3c5/probono-news.jpg', title='probono-news.jpg', border='0', alt='probono-news.jpg', width='735', height='403', align='middle')
 						br
 						br
 						span(style='color: rgb(255, 0, 0); font-size: x-large;') - 
