--- a/src/test.jade
+++ b/src/test.jade
@@ -13,7 +13,22 @@ html(lang='en')
 					.popup-navigation
 						ul.navigation-pannel
 							li
-								a(href="index.html")
+								a(href="main.html")
 									span Главная
+							li
+								a(href="about.html")
+									span О нас
+							li
+								a(href="search.html")
+									span Поиск
+							li
+								a(href="price-list.html")
+									span Прайс-лист
+							li
+								a(href="contacts.html")
+									span Контакты
+							li
+								a(href="adresses.html")
+									span Адреса
 
 	include ./partials/scripts.jade
