--- a/src/test.jade
+++ b/src/test.jade
@@ -30,5 +30,8 @@ html(lang='en')
 							li
 								a(href="adresses.html")
 									span Адреса
+							li
+								a(href="kved-1.html")
+									span КВЕД 2010
 
 	include ./partials/scripts.jade
