--- a/src/kved-1.jade
+++ b/src/kved-1.jade
@@ -83,7 +83,8 @@ html(lang='en')
 											i  від 29
 											i .11. 2010 року 
 											i № 530
-										h3(align='center', style='font-size: 13px; margin: 10px 0px; padding: 0px;') ВСТУП
+										// remove inline styles
+										h3 ВСТУП
 										p
 											| Однією з найважливіших умов розвитку національної статистики, адаптованої до умов глобалізованої економіки, є створення та впровадження сучасної системи національних статистичних класифікацій, згармонізованих із міжнародними. Упровадження статистичних класифікацій дає можливість підняти на якісно новий рівень статистичний аналіз стану національної економіки та прогнозування її розвитку, вивчення міжгалузевих проблем.  
 											br
@@ -104,7 +105,7 @@ html(lang='en')
 											br
 											br
 											|          Подану Класифікацію видів економічної діяльності створено на основі NACE (Rev. 2), упровадженої Регламентом (ЄС) Європейського парламенту та ради від 20 грудня 2006 року N 1893/2006.
-										h3(align='center', style='font-size: 13px; margin: 10px 0px; padding: 0px;') 1. СФЕРА ЗАСТОСУВАННЯ
+										h3 1. СФЕРА ЗАСТОСУВАННЯ
 										p
 											| Класифікація видів економічної діяльності (далі - КВЕД) установлює основи для підготовлення та поширення статистичної інформації за видами економічної діяльності. Основний принцип КВЕД полягає в об'єднанні підприємств, що виробляють подібні товари чи послуги або використовують подібні процеси для створення товарів чи послуг (тобто сировину, виробничий процес, методи або технології), у групи.  
 											br
@@ -134,7 +135,7 @@ html(lang='en')
 											br
 											br
 											|          Будь-яке використання КВЕД не для статистичних потреб (адміністративних або нормативних) здійснюють самі користувачі за власними правилами, відповідаючи за це та належно пояснюючи таке використання.
-										h3(align='center', style='font-size: 13px; margin: 10px 0px; padding: 0px;') 2. НОРМАТИВНІ ПОСИЛАННЯ
+										h3 2. НОРМАТИВНІ ПОСИЛАННЯ
 										p
 											| У цій класифікації є посилання на такі нормативні документи:  
 											br
@@ -145,7 +146,7 @@ html(lang='en')
 											|          - Закон України "Про державну статистику"  
 											br
 											|          - Методологічні положення щодо визначення основного виду економічної діяльності підприємства.
-										h3(align='center', style='font-size: 13px; margin: 10px 0px; padding: 0px;') 3. ЗАГАЛЬНІ ПОЛОЖЕННЯ
+										h3 3. ЗАГАЛЬНІ ПОЛОЖЕННЯ
 										p
 											| Об'єктами класифікації у КВЕД є види економічної діяльності юридичних осіб, відокремлених підрозділів юридичних осіб і фізичних осіб - підприємців (далі - суб'єкти), що їх на вищих рівнях класифікації групують у галузі.  
 											br
@@ -176,6 +177,7 @@ html(lang='en')
 											br
 										p
 											| КВЕД згармонізовано на рівні Y XX (розділ) з Міжнародною стандартною галузевою класифікацією всіх видів економічної діяльності (ISIC, Rev. 4 - 2008) та на рівні Y XX.XX (клас) - з Класифікацією видів економічної діяльності ЄС (NACE, Rev. 2 - 2006).  
+											br
 											br
 											|          На відміну від попередніх редакцій, КВЕД не має рівня підсекції через відсутність такого рівня в базовій класифікації NACE (Rev. 2). За результатами перегляду у КВЕД також немає рівня підкласу, що зумовлено значною деталізацією класів у NACE (Rev. 2). З огляду на це КВЕД є національною класифікацією, ідентичною базовій міжнародній статистичній Класифікації видів економічної діяльності ЄС - NACE (Rev. 2).
 										p(align='center', style='margin: 10px 0px; padding: 0px;')
@@ -395,15 +397,15 @@ html(lang='en')
 															p(align='center', style='margin: 10px 0px; padding: 0px;') 272 
 														td.odd(valign='top', width='25%', style='font-size: 12px;')
 															p(align='center', style='margin: 10px 0px; padding: 0px;') 615 
-										p(align='left', style='margin: 10px 0px; padding: 0px;')
+										p
 											br
 											|          Задля відображення зв'язків національної статистичної класифікації з міжнародними у КВЕД наведено коди NACE (Rev. 1.1, 2002) та ISIC (Rev. 4, 2008).  
 											br
 											|          Ведення КВЕД здійснює Держкомстат.  
 											br
 											|          Підставою для внесення змін до КВЕД є відповідні зміни в базовій міжнародній статистичній класифікації NACE.
-										h3(align='center', style='font-size: 13px; margin: 10px 0px; padding: 0px;') 4. ТЕРМІНИ ТА ВИЗНАЧЕННЯ ПОНЯТЬ
-										p(style='margin: 10px 0px; padding: 0px;')
+										h3 4. ТЕРМІНИ ТА ВИЗНАЧЕННЯ ПОНЯТЬ
+										p
 											| У цьому розділі наведено основні терміни та визначення понять, що їх використовують у контексті КВЕД. В інших контекстах ці терміни можуть мати інше значення.  
 											br
 											b Аутсорсинг
@@ -485,7 +487,7 @@ html(lang='en')
 											|  - це машини й обладнання, призначені для споживання домашніми господарствами (наприклад, побутові пральні машини).  
 											br
 											|          У тексті КВЕД вжито скорочення: н. в. і. у. - не віднесено до інших угруповань.
-										h3(align='center', style='font-size: 13px; margin: 10px 0px; padding: 0px;') 5. СТРУКТУРА КЛАСИФІКАЦІЇ ВИДІВ ЕКОНОМІЧНОЇ ДІЯЛЬНОСТІ
+										h3 5. СТРУКТУРА КЛАСИФІКАЦІЇ ВИДІВ ЕКОНОМІЧНОЇ ДІЯЛЬНОСТІ
 										table(border='1', cellpadding='0', cellspacing='0', width='100%')
 											tbody
 												tr
@@ -1163,7 +1165,7 @@ html(lang='en')
 														p(align='center', style='margin: 10px 0px; padding: 0px;') 05.02* 
 													td(valign='top', width='12%', style='font-size: 12px;')
 														p(align='center', style='margin: 10px 0px; padding: 0px;') 0322 
-										p(style='margin: 10px 0px; padding: 0px;')  
+										p
 										table(border='1', cellpadding='0', cellspacing='0', width='100%')
 											tbody
 												tr
@@ -12762,7 +12764,7 @@ html(lang='en')
 											|          ДОДАТОК А 
 											br
 											|          (обов'язковий)
-										h3(align='center', style='font-size: 13px; margin: 10px 0px; padding: 0px;') СТАНДАРТНІ УГРУПОВАННЯ ДЛЯ ПУБЛІКАЦІЇ СТАТИСТИЧНИХ ДАНИХ
+										h3 СТАНДАРТНІ УГРУПОВАННЯ ДЛЯ ПУБЛІКАЦІЇ СТАТИСТИЧНИХ ДАНИХ
 										p(style='margin: 10px 0px; padding: 0px;')
 											b Таблиця A*10/11
 										table(border='1', cellpadding='0', cellspacing='0', width='100%')
