--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -17,6 +17,27 @@
 	// height: 0
 	// width: 0
 
+.modal-image
+	transform-origin: 50% 50%;
+	transform: scale(1);
+	transition: all .6s;
+
+.tint
+	position: fixed
+	z-index: 1
+	left: 0
+	right: 0
+	top: 0
+	bottom: 0
+	background: rgba(201,201,201,0.5)
+	opacity: 0
+	pointer-events: none
+	z-index: 11
+	transition: opacity .6s
+	&.active
+		opacity: 1
+		pointer-events: all
+
 .wrap
 	margin: 0 auto
 	width: 72.7%
@@ -71,15 +92,29 @@
 
 // .menu
 body > .menu
-	background-color: #36393d
 	color: #eee
 	font-size: 12px
 	position: relative
+	left: 0
+	top: 0
+	width: 100%
+	height: 50px
 	.wrap
+		background-color: #36393d
+		position: relative
+		left: 0
+		top: 0
+		height: 50px
+		width: 100%
 		margin: 0
 		& > ul
 			@media (max-width: $tablet)
 				display: none
+	&.fixed
+		.wrap
+			height: 50px
+			position: fixed
+			z-index: 2
 	a
 		display: inline-block
 		color: white
@@ -106,16 +141,59 @@ body > .menu
 	.submenu
 		display: none
 		background: #000
+		overflow: auto
 		position: absolute
 		left: -30px
 		top: 50px
-		max-width: 80vw
+		max-width: 100vw
 		white-space: nowrap
+		// white-space: normal
 		padding: 18px
+		&::-webkit-scrollbar
+			height: 6px
+			width: 6px
+		&::-webkit-scrollbar-track
+			background-color: #444
+			border-left: 1px solid #ccc
+		&::-webkit-scrollbar-thumb
+			background-color: #fff
+		&::-webkit-scrollbar-thumb:hover
+			background-color: #aaa
 		a
 			font-size: 12px
+		.title
+			text-transform: uppercase
+			font-weight: 700
+			max-width: 14vw
+			text-overflow: ellipsis
+			overflow: hidden
+			transition: max-width 0.2s
 		ul
 			margin-left: 0
+			margin-top: 8px
+			margin-bottom: 24px
+			li
+				display: block
+				a
+					height: auto !important
+					line-height: 1.2em !important
+					text-overflow: ellipsis
+					overflow: hidden
+					max-width: 100%
+					text-transform: none
+					font-weight: 500
+					max-width: 14vw
+					transition: max-width 0.2s
+			&:last-child
+				margin-bottom: 0
+	.block-item
+		// width: 205px
+		display: inline-block
+		padding-right: 26px
+		vertical-align: top
+		&:hover
+			.title, ul li a
+				max-width: 100%
 	ul
 		margin-left: 30px
 		& > li
@@ -1007,6 +1085,202 @@ body > .menu
 			a
 				color: #bed8f0
 
+// PARTNERS PAGE
+.clients-list
+	font-size: 0
+	letter-spacing: 0
+	margin-top: 60px
+	margin-bottom: 60px
+	#cl-in
+		margin-left: calc(-9px)
+		margin-right: calc(-9px)
+		@media (max-width: $tablet)
+			margin-left: 20px
+			margin-right: 20px
+	.cl-item
+		border: 1px solid #f1f1f1
+		display: inline-block
+		vertical-align: top
+		margin-bottom: 20px
+		overflow: height
+		position: relative
+		width: 50%
+		width: calc(50% - 18px)
+		margin-left: calc(9px)
+		margin-right: calc(9px)
+		padding: 0 30px
+		@media (max-width: $mobile-large)
+			margin: 0 0 20px
+			width: 100%
+		&:after
+			content: 'Отзыв компании'
+			text-transform: uppercase
+			transform: translate(-50%, -50%)
+			position: absolute
+			left: 50%
+			top: 50%
+			background-color: #243e57
+			border-radius: 3px
+			color: white
+			font-size: 12px
+			font-weight: 400
+			line-height: 1em
+			padding: 15px 22px
+			z-index: 2
+			pointer-events: none
+			opacity: 0
+			transition: opacity .3s
+			white-space: nowrap
+		&:before
+			content: ''
+			background-color: transparent
+			cursor: pointer
+			position: absolute
+			left: 0
+			top: 0
+			height: 100%
+			width: 100%
+			z-index: 1
+			transition: background .3s
+		&:hover:before
+			background-color: rgba(241,241,241,0.9)
+		&:hover:after
+			opacity: 1
+		.cl-im
+			height: 120px
+			overflow: hidden
+			position: relative
+			img
+				position: absolute
+				left: 50%
+				top: 50%
+				transform: translate(-50%, -50%)
+				max-height: 110px
+		.cl-name
+			color: #36393d
+			font-size: 20px
+			font-weight: 300
+			line-height: 24px
+			margin-bottom: 20px
+		.cl-prev
+			color: #666
+			font-size: 14px
+			font-weight: 300
+			line-height: 20px
+			max-width: 300px
+			margin: 0 auto 40px
+			min-height: 60px
+		img
+			// width: 100%
+		.open-cl
+			display: block
+			text-align: center
+			img
+				max-height: 120px
+		&.opened
+			position: static
+			&:after
+				opacity: 0
+			&:before
+				background-color: transparent
+			.modal-cl
+				background: rgba(204,204,204,0.5)
+				opacity: 1
+				pointer-events: all
+				.cl-mod
+					transform: translate(0, 0)
+	.modal-cl
+		// display: none
+		pointer-events: none
+		background-color: #ccc
+		background: rgba(204,204,204,0)
+		position: fixed
+		top: 0
+		right: 0
+		bottom: 0
+		left: 0
+		z-index: 10
+		overflow: auto
+		opacity: 0
+		transition: opacity 0.6s, background 0.6s
+		.close
+			position: absolute
+			right: 9px
+			top: 9px
+			width: 21px
+			height: 21px
+			background: url('../img/icons/cross-button-4.svg') 50% 50% no-repeat
+			background-size: contain
+			cursor: pointer
+			// background-color: #6bb6ee
+		.cl-mod
+			box-shadow: 0 3px 30px rgba(0, 0, 0, 0.3)
+			border-radius: 3px
+			// position: absolute
+			// padding: 30px
+			// left: 50%
+			// top: 50%
+			background: #fff
+			transform: translate(0, 50px)
+			width: 100%
+			max-width: 600px
+			position: relative
+
+			color: #666
+			font-size: 14px
+			font-weight: 300
+			line-height: 20px
+			display: block
+			margin: 120px auto 40px
+			transition: transform 0.6s
+			@media (max-width: 620px)
+				margin: 0
+			& > img
+				margin: 30px 0 30px 30px
+				display: inline-block
+			.cl-name
+				margin-left: 30px
+				display: inline-block
+			.cl-short
+				margin-top: 20px
+			.cltabs
+				font-size: 0
+				letter-spacing: 0
+				& > *
+					display: inline-block
+					cursor: pointer
+					width: 50%
+					color: #666
+					font-size: 12px
+					font-weight: 400
+					text-transform: uppercase
+					text-align: center
+					padding: 15px
+					&.clact
+						background-color: #f2f2f2
+			.cltab
+				background-color: #f2f2f2
+				padding: 30px
+				display: none
+				max-height: 50vh
+				overflow: auto
+
+				&::-webkit-scrollbar
+					height: 8px
+					width: 8px
+				&::-webkit-scrollbar-track
+					background-color: #fff
+					border-left: 1px solid #eee
+				&::-webkit-scrollbar-thumb
+					background-color: #6bb6ee
+				&::-webkit-scrollbar-thumb:hover
+					background-color: #96c6ea
+				&.active
+					display: block
+				img
+					max-width: 100%
+					height: auto !important
+
 .consult-me-block
 	background-color: #eef2f8
 	margin: 64px 0 101px
@@ -1428,7 +1702,13 @@ body > .menu
 			@media (max-width: $tablet)
 				font-size: 20px
 		h3
-			font-size: 13px
+			// font-size: 13px
+			color: #243e57
+			font-weight: 300
+			font-size: 28px
+			text-align: left
+			@media (max-width: $tablet)
+				font-size: 18px
 		p
 			margin-bottom: 1em
 		table
