--- a/src/test.jade
+++ b/src/test.jade
@@ -33,5 +33,8 @@ html(lang='en')
 							li
 								a(href="kved-1.html")
 									span КВЕД 2010
+							li
+								a(href="partners.html")
+									span Партнеры
 
 	include ./partials/scripts.jade
