--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -136,7 +136,7 @@
 			li
 				a(href='/uslugi/')
 					span Услуги
-				.submenu
+				.submenu.hidden
 					a.close(href='#')
 					.inner
 						.block-item
@@ -265,3 +265,139 @@
 					input.zoom(name='s', type='submit', value='')
 		.clear
 
+.navigation-sidebar#navigation-sidebar(class= page === 'main' ? 'mainpage' : '')
+	.nicescroll.sidebar-expanded.sidebar-wrapper
+		a.nav-header-btn.text-center.toggle-nav-collapse(title='Open/Close', href='#')
+			span.sr-only Toggle navigation
+			svg(version='1.1', xmlns:svgjs='http://svgjs.com/svgjs', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 12 13', enable-background='new 0 0 12 13', xml:space='preserve')
+				path(fill='#243E57', d='M0,12.3L0.7,13L7,6.5l0,0l0,0L0.7,0L0,0.7l5.7,5.8L0,12.3z M5,12.3L5.7,13L12,6.5l0,0\
+				l0,0L5.7,0L5,0.7l5.7,5.8L5,12.3z')
+
+		ul.nav.nav-sidebar(tabindex='0')
+			li
+				a(title='Корпоративные правоотношения', href='#')
+					.icon-container
+						i.sidebar-icon.icon-1
+					span Корпоративные правоотношения
+				.submenu
+					ul.inner-holder
+						li
+							a(href='#')
+								img(src='http://frontend.web1.com.ua/justicon/images/img1.jpg', alt='')
+						li
+							a(href='#') Недвижимость
+							ul.bl
+								li
+									a(href='#') Юридическое консультирование и 
+									ul
+										li
+											a(href='#') Юридическое консультирование по вопросам операций с недвижимостью
+										li
+											a(href='#')
+												| Разработка и анализ договоров, связанных с недвижимостью (инвестиционный договор, купля-продажа ипотека и т.д.)
+								li
+									a(href='#') Оформление права 
+									ul
+										li
+											a(href='#')  Регистрация и получение Свидетельства о праве собственности 
+										li
+											a(href='#')
+												| Проведение государственной регистрации прав на основании решений органов власти, в частности на основании решения суда и т.п.
+										li
+											a(href='#')
+												| Проведение государственной регистрации прав, которые возникли до января и не были зарегистрированы в соответствии с законодательством
+										li
+											a(href='#')
+												| Получение информации из Государственного реестра прав на недвижимое имущество (извлечение, выписка из Государственного реестра прав на недвижимое имущество)
+								li
+									a(href='#') Другие услуги 
+									ul
+										li
+											a(href='#')  Приватизация недвижимости 
+										li
+											a(href='#')
+												| Проведение государственной регистрации прав на основании решений органов власти, в частности на основании решения суда и т.п.
+										li
+											a(href='#')
+												| Проведение государственной регистрации прав, которые возникли до января и не были зарегистрированы в соответствии с законодательством
+										li
+											a(href='#')
+												| Получение информации из Государственного реестра прав на недвижимое имущество (извлечение, выписка из Государственного реестра прав на недвижимое имущество)
+						li
+							a(href='#') Строительство
+							ul
+								li
+									a(href='#')  Юридическое консультирование по вопросам строительства
+								li
+									a(href='#') Оформление строительного паспорта 
+								li
+									a(href='#') Получение градостроительных условий и ограничений 
+								li
+									a(href='#')  Изменение функционального назначения нежилых помещений
+								li
+									a(href='#') Получение разрешения на строительные работы 
+								li
+									a(href='#') Ввод в эксплуатацию объектов строительства  
+								li
+									a(href='#')  Узаконивание перепланировки/реконструкции
+								li
+									a(href='#')  Узаконить самострой (самовольное строительство)
+								li
+									a(href='#')  Разрешение на размещение наружной рекламы
+						li
+							a(href='#') Земельное право
+							ul
+								li
+									a(href='#')  Юридическое консультирование по вопросам строительства
+								li
+									a(href='#')
+										| Сопровождение сделок и анализ документов, подтверждающих права на земельный участок
+								li
+									a(href='#') Правовое сопровождение выделения земельного участка 
+								li
+									a(href='#')  Изменение целевого назначения земельного участка
+								li
+									a(href='#') Приватизация земельных участков
+								li
+									a(href='#') Присвоение кадастрового номера земельному участку 
+								li
+									a(href='#')  Получение извлечения из Государственного земельного кадастра
+								li
+									a(href='#')  Оценка земельного участка)
+
+
+			li
+				a(title='Лицензии, разрешения, сертификация', href='#')
+					.icon-container
+						i.sidebar-icon.icon-2
+					span Лицензии, разрешения, сертификация
+			li
+				a(title='Судебная практика', href='#')
+					.icon-container
+						i.sidebar-icon.icon-3
+					span Судебная практика
+			li
+				a(title='Недвижимость, строительство, земельное право', href='#')
+					.icon-container
+						i.sidebar-icon.icon-4
+					span Недвижимость, строительство, земельное право
+			li
+				a(title='Миграционное право', href='#')
+					.icon-container
+						i.sidebar-icon.icon-5
+					span Миграционное право
+			li
+				a(title='Интеллектуальное право', href='#')
+					.icon-container
+						i.sidebar-icon.icon-6
+					span Интеллектуальное право
+			li
+				a(title='Абонентское обслуживание', href='#')
+					.icon-container
+						i.sidebar-icon.icon-7
+					span Абонентское обслуживание
+			li
+				a(title='Юридический и налоговый консалтинг', href='#')
+					.icon-container
+						i.sidebar-icon.icon-8
+					span Юридический и налоговый консалтинг
