--- a/src/css/global.sass
+++ b/src/css/global.sass
@@ -10,6 +10,7 @@ body
 	font-weight: 400
 	-webkit-font-smoothing: antialiased;
 	-webkit-tap-highlight-color: transparent;
+	overflow-x: hidden
 	&.fixed
 		overflow: hidden
 		&.client-ios
@@ -637,7 +638,17 @@ button:active, .btn:active, button:focus, .btn:focus
 	overflow: hidden
 	overflow-x: hidden
 	overflow-y: auto
-	transition: opacity .3s ease-out, transform .2s, visibility .4s
+	transition: opacity .3s ease-out, transform .2s, visibility .4
+	&::-webkit-scrollbar
+		height: 8px
+		width: 8px
+	&::-webkit-scrollbar-track
+		background-color: #fff
+		border-left: 1px solid #eee
+	&::-webkit-scrollbar-thumb
+		background-color: #6bb6ee
+	&::-webkit-scrollbar-thumb:hover
+		background-color: #96c6eas
 	.close-modal
 		z-index: 3
 		&:after
